force-app/main/default/objects/Contact/fields/Issue_Area__c.field-meta.xml
<CustomField>
    <fullName>Issue_Area__c</fullName>
    <label>Issue Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aging And Long-Term Care</fullName>
            </value>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Appropriations</fullName>
            </value>
            <value>
                <fullName>Arts, Entertainment, Sports, And Tourism</fullName>
            </value>
            <value>
                <fullName>Banking And Finance</fullName>
            </value>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Business And Professions</fullName>
            </value>
            <value>
                <fullName>Communications And Conveyance</fullName>
            </value>
            <value>
                <fullName>Economic Development, Growth, And Household Impact</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Elections</fullName>
            </value>
            <value>
                <fullName>Emergency Management</fullName>
            </value>
            <value>
                <fullName>Environmental Safety And Toxic Materials</fullName>
            </value>
            <value>
                <fullName>Governmental Organization</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Higher Education</fullName>
            </value>
            <value>
                <fullName>Housing And Community Development</fullName>
            </value>
            <value>
                <fullName>Human Services</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Joint Legislative Audit Committee</fullName>
            </value>
            <value>
                <fullName>Judiciary</fullName>
            </value>
            <value>
                <fullName>Labor And Employment</fullName>
            </value>
            <value>
                <fullName>Local Government</fullName>
            </value>
            <value>
                <fullName>Military And Veterans Affairs</fullName>
            </value>
            <value>
                <fullName>Natural Resources</fullName>
            </value>
            <value>
                <fullName>Privacy And Consumer Protection</fullName>
            </value>
            <value>
                <fullName>Public Employment And Retirement</fullName>
            </value>
            <value>
                <fullName>Public Safety</fullName>
            </value>
            <value>
                <fullName>Revenue And Taxation</fullName>
            </value>
            <value>
                <fullName>Transportation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>