force-app/main/default/objects/Contact/fields/Legacy_District_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_District_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy District ID</label>
    <referenceTo>Legislative_District__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>