force-app/main/default/objects/Contact/fields/Legacy_Master_California_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Master_California_Contact_ID__c</fullName>
    <label>Legacy Master - California Contact ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>