force-app/main/default/objects/Contact/fields/Legislator_Email__c.field-meta.xml
<CustomField>
    <fullName>Legislator_Email__c</fullName>
    <inlineHelpText>This field is only visible to Government Relations staff. If you would like to store an email address which is hidden from other staff at Easterseals Southern California, enter it here.</inlineHelpText>
    <label>Legislator Email</label>
    <type>Email</type>
</CustomField>