force-app/main/default/objects/Contact/fields/Legislator_Phone__c.field-meta.xml
<CustomField>
    <fullName>Legislator_Phone__c</fullName>
    <inlineHelpText>This field is only visible to Government Relations staff. If you have a private phone number that you would like to remain hidden from other Easterseals Southern California staff, enter it here instead of the other phone fields.</inlineHelpText>
    <label>Legislator Phone</label>
    <type>Phone</type>
</CustomField>